--- a/cuenta.html
+++ b/cuenta.html
@@ -595,14 +595,16 @@ return;
 }
 orders.sort((a, b) => new Date(b.date) - new Date(a.date));
 orders.forEach(order => {
-const estado = order.status === 'completado' ? 'Completado' : 'Activo';
-orderHistoryContainer.innerHTML += `
-<div class="order-item slide-up">
-<div><strong>ID:</strong> ${order.id}</div>
-<div><strong>Fecha:</strong> ${order.date}</div>
-<div><strong>Total:</strong> $${order.total} MXN</div>
-<div><strong>Estado:</strong> <span class="order-item-status status-${estado.toLowerCase()}">${estado}</span></div>
-</div>`;
+  const estado = order.status === 'completado' ? 'Completado' : 'Activo';
+  orderHistoryContainer.innerHTML += `
+  <div class="order-item slide-up">
+    <div><strong>Folio:</strong> ${order.order_folio}</div>
+    <div><strong>Fecha Pedido:</strong> ${order.order_date}</div>
+    <div><strong>Entrega:</strong> ${order.delivery_date || '-'}</div>
+    <div><strong>Recolección:</strong> ${order.pickup_date || '-'}</div>
+    <div><strong>Total:</strong> $${order.total_amount} MXN</div>
+    <div><strong>Estado:</strong> <span class="order-item-status status-${estado.toLowerCase()}">${estado}</span></div>
+  </div>`;
 });
 } catch (error) {
 showNotification(`Error al cargar pedidos: ${error.message}`, true);
