--- a/cuenta.html
+++ b/cuenta.html
@@ -595,16 +595,17 @@ return;
 }
 orders.sort((a, b) => new Date(b.date) - new Date(a.date));
 orders.forEach(order => {
-  const estado = order.status === 'completado' ? 'Completado' : 'Activo';
+  const estado = order.estado === 'completado' ? 'Completado' : 'Activo';
   orderHistoryContainer.innerHTML += `
-  <div class="order-item slide-up">
-    <div><strong>Folio:</strong> ${order.order_folio || '-'}</div>
-    <div><strong>Fecha Pedido:</strong> ${order.order_date || '-'}</div>
-    <div><strong>Entrega:</strong> ${order.delivery_date || '-'}</div>
-    <div><strong>Recolección:</strong> ${order.pickup_date || '-'}</div>
-    <div><strong>Total:</strong> $${order.total_amount || '0.00'} MXN</div>
-    <div><strong>Estado:</strong> <span class="order-item-status status-${estado.toLowerCase()}">${estado}</span></div>
-  </div>`;
+    <div class="order-item slide-up">
+      <div><strong>Folio:</strong> ${order.id || '-'}</div>
+      <div><strong>Fecha Pedido:</strong> ${order.fecha || '-'}</div>
+      <div><strong>Entrega:</strong> ${order.entrega || '-'}</div>
+      <div><strong>Recolección:</strong> ${order.recoleccion || '-'}</div>
+      <div><strong>Total:</strong> $${order.total || '0.00'} MXN</div>
+      <div><strong>Estado:</strong> <span class="order-item-status status-${estado.toLowerCase()}">${estado}</span></div>
+    </div>
+  `;
 });
 } catch (error) {
 showNotification(`Error al cargar pedidos: ${error.message}`, true);
