--- a/cuenta.html
+++ b/cuenta.html
@@ -107,6 +107,37 @@ body { background: #f1f5f9; }
 hr { border: 0; border-top: 1px solid #eee; margin: 30px 0; }
 #seguridad-section p:last-of-type, #notificaciones-section p:last-of-type { font-size:0.9rem; color:var(--text-light-account); margin-top:10px;}
 #notificaciones-section .form-group label { margin-bottom: 0; }
+.order-table {
+  width: 100%;
+  max-width: 450px;
+  margin: 14px auto;
+  background: #fff;
+  border-radius: 10px;
+  border: 1px solid #e0e0e0;
+  box-shadow: 0 2px 8px rgba(74,144,226,0.07);
+  font-size: 1rem;
+}
+.order-table td {
+  padding: 8px 10px;
+}
+.order-table tr:nth-child(even) td {
+  background: #f8f9fa;
+}
+.order-item-status {
+  padding: 5px 14px;
+  border-radius: 99px;
+  font-size: 0.97rem;
+  font-weight: bold;
+  text-align: center;
+}
+.status-activo {
+  color: #4a90e2;
+  background: rgba(74,144,226,0.11);
+}
+.status-completado {
+  color: #00B386;
+  background: rgba(0,179,134,0.11);
+}
 /* --- Notificación animada para confirmaciones rápidas --- */
 #notificationPopup {
 position: fixed;
@@ -597,14 +628,33 @@ orders.sort((a, b) => new Date(b.date) - new Date(a.date));
 orders.forEach(order => {
   const estado = order.estado === 'completado' ? 'Completado' : 'Activo';
   orderHistoryContainer.innerHTML += `
-    <div class="order-item slide-up">
-      <div><strong>Folio:</strong> ${order.id || '-'}</div>
-      <div><strong>Fecha Pedido:</strong> ${order.fecha || '-'}</div>
-      <div><strong>Entrega:</strong> ${order.entrega || '-'}</div>
-      <div><strong>Recolección:</strong> ${order.recoleccion || '-'}</div>
-      <div><strong>Total:</strong> $${order.total || '0.00'} MXN</div>
-      <div><strong>Estado:</strong> <span class="order-item-status status-${estado.toLowerCase()}">${estado}</span></div>
-    </div>
+    <table class="order-table">
+      <tr>
+        <td><strong>Folio:</strong></td>
+        <td>${order.id}</td>
+      </tr>
+      <tr>
+        <td><strong>Fecha Pedido:</strong></td>
+        <td>${order.fecha}</td>
+      </tr>
+      <tr>
+        <td><strong>Entrega:</strong></td>
+        <td>${order.entrega}</td>
+      </tr>
+      <tr>
+        <td><strong>Recolección:</strong></td>
+        <td>${order.recoleccion}</td>
+      </tr>
+      <tr>
+        <td><strong>Total:</strong></td>
+        <td>$${order.total} MXN</td>
+      </tr>
+      <tr>
+        <td><strong>Estado:</strong></td>
+        <td><span class="order-item-status status-${estado.toLowerCase()}">${estado}</span></td>
+      </tr>
+    </table>
+    <br>
   `;
 });
 } catch (error) {
