--- a/contacto.html
+++ b/contacto.html
@@ -189,26 +189,12 @@
     </style>
 </head>
 <body>
-<header>
-    <nav class="navbar">
-        <div class="container navbar-content">
-            <a href="index.html" class="logo">
-                <img src="assets/img/Greenhaul-fl.svg" alt="Logo de GreenHaul">
-            </a>
-            <button class="navbar-toggler" id="navbarToggler" aria-label="Toggle navigation">
-                <span class="toggler-icon"></span>
-                <span class="toggler-icon"></span>
-                <span class="toggler-icon"></span>
-            </button>
-            <div class="navbar-collapse" id="navbarCollapse">
-                <ul class="nav-links-list">
-                    <li><a href="index.html" class="nav-link">Inicio</a></li>
-                    <li><a href="productos.html" class="nav-link">Productos</a></li>
-                    <li><a href="servicios.html" class="nav-link">Servicios</a></li>
-                    <li><a href="nosotros.html" class="nav-link">Nosotros</a></li>
-                    <li><a href="contacto.html" class="nav-link active">Contacto</a></li>
-                    <li><a href="faq.html" class="nav-link">Preguntas</a></li>
-                </ul>
+    <header>
+        <nav class="navbar">
+            <div class="container navbar-content">
+                <a href="index.html" class="logo">
+                    <img src="assets/img/Greenhaul-fl.svg" alt="Logo de GreenHaul">
+                </a>
                 <div class="navbar-right-items">
                     <div class="navbar-user-actions" id="navbarUserActions">
                         <a href="login.html" class="btn btn-outline" id="loginBtn">Iniciar Sesión</a>
@@ -222,10 +208,24 @@
                         </a>
                     </div>
                 </div>
+                <button class="navbar-toggler" id="navbarToggler" aria-label="Toggle navigation">
+                    <span class="toggler-icon"></span>
+                    <span class="toggler-icon"></span>
+                    <span class="toggler-icon"></span>
+                </button>
+                <div class="navbar-collapse" id="navbarCollapse">
+                    <ul class="nav-links-list">
+                        <li><a href="index.html" class="nav-link">Inicio</a></li>
+                        <li><a href="productos.html" class="nav-link">Productos</a></li>
+                        <li><a href="servicios.html" class="nav-link">Servicios</a></li>
+                        <li><a href="nosotros.html" class="nav-link active">Nosotros</a></li>
+                        <li><a href="contacto.html" class="nav-link">Contacto</a></li>
+                        <li><a href="faq.html" class="nav-link">Preguntas</a></li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
-</header>
+        </nav>
+    </header>
 
 <main class="page-content">
     <section class="contact-page-section">
