--- a/faq.html
+++ b/faq.html
@@ -6,6 +6,7 @@
     <title>Preguntas Frecuentes - GreenHaul</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="assets/css/styles.css">
+
     <style>
         /* Fondo general y header */
         body {
@@ -19,11 +20,50 @@
             max-width: 160px;
             transition: height 0.2s;
         }
-        @media (max-width: 900px) {
-            .logo img { height: 42px; max-width: 120px; }
-            .navbar-right-items { gap: 5px; }
-            #loginBtn.btn-outline { font-size: 0.85rem; padding: 4px 10px; min-width: 60px; height: 22px; line-height: 1.2; border-radius: 7px; }
+        /* HEADER ALINEADO Y RESPONSIVO */
+        .navbar-content {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          padding: 0 16px;
         }
+        .logo {
+          margin-right: auto;
+        }
+        .navbar-right-items {
+          display: flex;
+          align-items: center;
+          gap: 12px;
+        }
+        .navbar-user-actions a,
+        .navbar-user-actions button {
+          margin-right: 8px;
+        }
+        .nav-icons {
+          margin-left: 10px;
+        }
+        @media (max-width: 900px) {
+          .navbar-content {
+            flex-wrap: wrap;
+            gap: 8px;
+            padding: 0 6px;
+          }
+          .navbar-right-items {
+            gap: 6px;
+          }
+          .logo img {
+            height: 38px !important;
+            max-width: 110px !important;
+          }
+          #loginBtn.btn-outline {
+            font-size: 0.85rem;
+            padding: 4px 10px;
+            min-width: 60px;
+            height: 22px;
+            border-radius: 7px;
+          }
+        }
+
         /* --- FAQ styles --- */
         .faq-section-bg {
             position: relative;
@@ -66,7 +106,7 @@
             border-radius: 16px;
             box-shadow: 0 4px 14px rgba(44, 62, 80, 0.04);
             margin-bottom: 26px;
-            overflow: hidden;
+            overflow: visible; /* Corregido para desplegar */
             transition: border-color 0.3s, box-shadow 0.3s;
             position: relative;
         }
@@ -93,8 +133,12 @@
         .faq-answer {
             max-height: 0;
             overflow: hidden;
-            transition: max-height 0.4s cubic-bezier(.56,.07,.86,.58);
+            transition: max-height 0.6s cubic-bezier(.56,.07,.86,.58);
             background: #f8f9fa;
+        }
+        .faq-item.active .faq-answer {
+            /* Para que el contenido se vea completo */
+            overflow: visible;
         }
         .faq-answer p {
             padding: 0 28px 24px 28px;
@@ -104,6 +148,7 @@
             color: #444;
             border-top: 1px solid #e7eaf3;
             padding-top: 18px;
+            word-break: break-word;
         }
         .faq-item.active .faq-question .icon {
             transform: rotate(45deg);
